fixed white space bug on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,10 @@
 }
 
 body {
-  margin: 0;
-  max-height: 100%;
+  margin: 0px;
+  padding: 0px;
+  height: 100%;
+  width: 100%;
   overflow: auto;
   overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -21,6 +23,10 @@ code {
 html {
   overflow: hidden;
   height: 100%;
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 :root {
